# physical-ai-safety-observability

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  runtime_settings.py
.github/workflows/: ci.yml
api/: main.py
api/models/: __init__.py  camera.py
api/routes/: cameras.py  events.py
api/services/: __init__.py  migrations.py  store.py
configs/: cosmos_reasoning.json  jetson.json  local.json
docs/: architecture.md  codex_handoff.md  cosmos_vss_live_camera.md  database_migrations.md  deployment_jetson.md  deployment_local.md  event_schema.md  evidence_chain.md  real_vlm_integration.md  roadmap.md  safety_policy_model.md
docs/diagrams/: data-flow.mmd  deployment-view.mmd  runtime-flow.mmd  (+1 more)
edge/: __init__.py  frame_sampler.py  live_camera.py  source_loader.py  worker.py
events/: __init__.py  lifecycle.py  schemas.py
evidence/: __init__.py  evidence_chain.py  hashing.py
examples/: omniverse_ppe_source.json  sample_event.json  sample_incident.json  sample_source.json  tapo_rtsp_cosmos_source.json
migrations/: env.py
output/: construction_entry_compliant.usd
replay/: __init__.py  incident_replay.py
rules/: __init__.py  engine.py  policies.py  severity.py
simulation/: author_construction_entry_compliant.py  omniverse_ppe_world.py
spatial/: __init__.py  calibration.py  zones.py
telemetry/: __init__.py  logging.py  metrics.py  runtime.py
tests/: test_api.py  test_cosmos_reason2_adapter.py  test_evidence.py  test_live_camera.py  test_rules.py  test_worker.py
(+6 files in other folders)
