[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-ai-safety-observability"
version = "0.1.0"
description = "Runtime-aware Physical AI safety observability pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
opencv = [
  "opencv-python-headless>=4.9",
]

[tool.setuptools]
py-modules = ["runtime_settings"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "api*",
  "edge*",
  "rules*",
  "telemetry*",
  "events*",
  "evidence*",
  "spatial*",
  "replay*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
